# Spec-Prompt-Meta

./: .gitignore  README.md  pyproject.toml
Input/audio/: Clarendon Drive.m4a
context/: spec-prompt-examples.md
docs/: oai-speech.md  oai-text.md
output/: repo_map.md
src/: main.py  models.py  prompt.j2  repo_map.py  utils.py
